[package]
name = "rustgl"
version = "0.1.0"
authors = ["xenone <rosenkranz1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Attr',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Node',
  'Text',
  'Window',
]